# openmed

./: .bandit  .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .swift-format  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCEPT.csv  CONCEPT_SYNONYM.csv  CONTRIBUTING.md  Dockerfile  Makefile  OVERVIEW.md  Package.resolved  Package.swift  README.ar.md  README.de.md  README.es.md  README.fa.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.nl.md  README.pt.md  README.sw.md  README.te.md  README.tr.md  README.zh-CN.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.4.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  (+16 more)
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  model_request.yml
.github/workflows/: android-ci.yml  android-publish.yml  ci.yml  coherence.yml  container-multiarch.yml  convert-models.yml  flutter-ci.yml  fuzz-parsers.yml  fuzz.yml  helm-lint.yml  image-signing.yml  low-resource.yml  manifest-refresh.yml  mlx-test.yml  nix.yml  openhim-mediator.yml  pages.yml  provenance.yml  publish.yml  release-gates.yml  release.yml  repro-provenance.yml  reproducible-lock.yml  sbom-image.yml  secret-scan.yml  swift-test.yml  vuln-scan.yml
android/: .gitignore  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
android/gradle/: budgets.properties  libs.versions.toml
android/openmedkit/: README.md  build.gradle.kts  consumer-rules.pro
clients/go/: README.md  client.go  client_test.go  go.mod
clients/typescript/: README.md  package.json  tsconfig.json
deploy/docker/: Dockerfile  Dockerfile.distroless
deploy/k8s/: hpa.yaml
deploy/policy/: image-verification.yaml
deploy/security/: cve-allowlist.yaml
docs/: _hooks.py  africa-onboarding.md  analyze-text.md  android-integration.md  android-parity.md  android-quickstart.md  android-tokenization.md  anonymization.md  api-reference.md  batch-howto.md  batch-processing.md  chw-form-deid.md  cli.md  clinical-domains.md  clinical-validation-protocol.md  compliance.md  configuration.md  contributing.md  cookbook.md  coreml-export.md  development.md  dhis2-export.md  document-adapter-provenance.md  duckdb-deidentification.md  ecosystem-overview.md  eval-harness.md  examples.md  export-awq.md  export-gguf.md  export-gptq.md  export-matrix.md  export-mlx-quant.md  export-onnx-android.md  export-transformersjs.md  faq.md  feature-map.md  fhir-interop.md  fhir-smart-guidelines.md  getting-started.hi.md  getting-started.md  (+55 more)
docs/api/: deidentification.md  graphql-schema.graphql  openapi.json  openmed.postman_collection.json
docs/benchmarks/: arm-latency.md  golden.md  golden.report.json  i18n-throughput.md  low-resource-baseline.json  low-resource.md
docs/brand/: MASCOT_BRIEF.md  mascot-image-prompts.md
docs/clinical/: abbreviation-disambiguation.md  chinese-terminology-grounding.md  context-and-extraction.md  coreference.md  experiencer-refinement.md  multilingual-relations.md  sig-parser.md  temporal-normalization.md
docs/compliance/: africa-context-sensitive-attributes.md  africa-data-residency-guide.md  api-deprecation-policy.md  breach-notification-runbook.md  consent-data-use-tags.md  dpa-template.md  dpia-template.md  gdpr-dsar-export.md  hipaa-safe-harbor-attestation.md  iso-27701-control-evidence.md  ke-dpa-identifier-checklist.md  model-card-eu-ai-act-fields.md  ng-ndpa-identifier-checklist.md  north-africa-pdpl-0908-checklist.md  za-popia-identifier-checklist.md
docs/contributing/: reproducible-dependencies.md
docs/deploy/: autoscaling.md  hardened-image.md  helm.md  multi-arch.md  openhim-mediator.md
docs/eval/: leaderboard.md
docs/i18n/: glossary.md  readme_section_hashes.json
docs/integrations/: arrow-flight.md  columnar-redactor.md  dask.md  distributed-sql-udf.md  lakehouse-redaction.md  pandas-on-spark.md  ray-map-batches.md  sqlalchemy.md
docs/interop/: hl7v2-narrative-extraction.md  x12-837-redaction.md
docs/leaderboard/: index.md
docs/migration/: 1.8-to-1.9.md
docs/multimodal/: epub-extraction.md  odt-extraction.md  pptx-redaction.md  rtf-extraction.md  xlsx-cell-redaction.md
docs/release/: semver-and-channels.md  trusted-publishing.md  v1.6-v1.7-feature-coverage.md  v1.7.0.md  v1.8.0.md  v1.9.0.md  v1.9.1.md
docs/runtimes/: android-accelerators.md  apple-platforms.md  awq-grounding.md  browser-extension.md  (+7 more)
examples/: __init__.py  agent_tools_quickstart.py  chw_form_deid.py  clinical_ner_families.py  datasets_walkthrough.py  deid_chinese_clinical_note.py  deid_hindi_hinglish_note.py  dhis2_district_export.py  first_five_minutes_redact_extract_fhir.py  gradio_deid_app.py  mlx_gliner_zero_shot_ner.py  mlx_token_classification_ner.py  obfuscation_demo.py  onboarding_china_mirrors.py  onboarding_india_dpdp.py  openmrs_deid_handoff.py  pharma_turkish_example.py  pii_batch_processing.py  pii_model_comparison.py  pii_multilingual_new_languages.py  privacy_filter_unified.py  privacy_gateway_quickstart.py  sms_deid_helpdesk_logs.py  v16_policy_audit_release_gates.py  v17_multimodal_browser_interop.py
gates/: baseline.json  release_budgets.json
js/openmedkit-flutter/linux/: CMakeLists.txt  open_med_kit_flutter_plugin.cc
js/openmedkit-flutter/linux/include/openmedkit_flutter/: open_med_kit_flutter_plugin.h
js/openmedkit-flutter/native/: CMakeLists.txt  openmed_ffi.c  openmed_ffi.h
openmed/: __about__.py  __init__.py
recipes/: queue.yaml
scripts/: README.md  audit_pii_tokenizer_coverage.py  check_public_api_docstrings.py  export_graphql_schema.py  export_openapi.py  format_swift.sh  generate_grpc_stubs.py  lint_swift.sh  openmed_sidecar_entry.py  reset_uv_env_and_run_tests.sh  smoke_gliner.py
skills/: README.md  build_catalog.py
tests/: __init__.py  conftest.py  run-tests.sh  test_cli_medical_tokenizer.py  test_medical_remap.py  test_medical_tokenizer.py
(+1938 files in other folders)
