[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmed"
dynamic = ["version"]
description = "OpenMed delivers state-of-the-art biomedical and clinical LLMs that rival proprietary enterprise stacks, unifying model discovery, advanced extractions, and one-line orchestration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = [
  "biomedical",
  "clinical",
  "NLP",
  "LLM",
  "healthcare",
  "medical",
  "natural language processing",
  "medical language models",
  "medical LLMs",
  "medical NLP",
  "medical NER",
  "medical de-identification",
  "medical extraction",
  "medical reasoning",
]
dependencies = [
  "pysbd>=0.3.4,<0.4",
  "faker>=22.0",
]

authors = [
  { name = "Maziyar Panahi" }
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "jsonschema>=4.0",
  "fastapi>=0.110",
  "httpx>=0.27",
  "python-dateutil>=2.8",
  "ruff==0.15.20",
  "tomli>=2.0; python_version < '3.11'",
]

cli = [
  "rich>=13.0",
  "typer>=0.12",
]

mcp = [
  "mcp>=1.9",
]

presidio = [
  "presidio-analyzer>=2.2.354,<3",
]

spacy = [
  "click>=8.0",
  "spacy>=3.5",
]

multimodal = [
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "Pillow>=10.0",
  "pytesseract>=0.3.10",
]

# PaddleOCR is a heavy, platform-sensitive backend (pulls in paddlepaddle), so
# it is opt-in rather than bundled into the general multimodal extra.
ocr-paddle = [
  "paddleocr>=2.7",
]

awq = [
  "autoawq>=0.2.9",
]

langchain = [
  "langchain-core>=0.2,<2",
]

hf = [
  "transformers>=4.50",
  "huggingface-hub>=0.30",
  "accelerate>=0.29",
  "tokenizers>=0.15"
]

service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

gliner = [
  "gliner[tokenizers]>=0.2.0",
  "torch>=2.0"
]

mlx = [
  "mlx>=0.22",
  "mlx-lm>=0.31",
  "huggingface-hub>=0.30",
  "transformers>=4.50",
  "tokenizers>=0.15",
  "safetensors>=0.4",
  "tiktoken>=0.7",
]

coreml = [
  "coremltools>=8.0",
  "huggingface-hub>=0.30",
  "torch>=2.0",
  "transformers>=4.50",
]

onnx = [
  "onnx>=1.14",
  "onnxruntime>=1.16",
  "onnxscript>=0.1.0",
  "torch>=2.0",
  "transformers>=4.50",
]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-git-revision-date-localized-plugin>=1.2.6",
  "mkdocs-minify-plugin>=0.8.0",
  "pymdown-extensions>=10.8",
  "mkdocstrings[python]",
  "griffe",
]

[project.scripts]
openmed = "openmed.cli:main"

[tool.hatch.build]
include = [
  "openmed/**",
  "openmed/core/thresholds.json",
  "openmed/core/policies/*.json",
  "openmed/core/schemas/json/*.json",
  "gates/baseline.json",
  "models.jsonl",
  "LICENSE",
  "NOTICE",
  "README.md",
  "pyproject.toml"
]

[tool.hatch.version]
path = "openmed/__about__.py"

[tool.hatch.publish.index]
disable = false

[tool.hatch.publish.index.repos]
pypi = { url = "https://upload.pypi.org/legacy/" }

[tool.pytest.ini_options]
markers = [
  "integration: marks end-to-end or external integration tests",
  "slow: marks tests that are expected to run slowly"
]
python_files = [
  "test_*.py",
  "*_test.py",
]
testpaths = [
  "tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
  "examples/notebooks",
]

[tool.ruff.lint]
select = [
  "E9",
  "F63",
  "F7",
  "F82",
  "I",
]
fixable = ["I"]
unfixable = [
  "E9",
  "F63",
  "F7",
  "F82",
]

[tool.ruff.lint.isort]
known-first-party = ["openmed"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
